# imprints

./: .gitignore  CLAUDE.md  README.md  marc_country_codes.csv  marc_place_008_geonames.csv  nyc_variants.txt  pyproject.toml
figures/scripts/: city_growth.py  cross_range.py  fig1.py  fig1_primary_only.py  fig2.py  fig3.py  fig4.py  fig5.py  fig6.py  fig7.py  make_figures.py  new_publisher_nyc_share.py  nyc_and_publishers.py  nyc_peak_map.py  nyc_peak_map_diverging.py  nyc_peak_map_simple.py  predict.py  ps_nyc_counts.py  ps_nyc_share.py  ps_range_nyc_share.py  ps_unique_publishers.py  range_shares.py  style.py  unique_places_per_100.py
notebooks/: 2 Clean LC Data.ipynb  3 Visualize LC Data.ipynb  visualizations.ipynb
scripts/: download_data.sh
src/imprints/: __init__.py  class_totals.py  compare_nyc_identification.py  cross_range.py  data_cleaning.py  (+19 more)
tests/: conftest.py  test_accuracy_improvements.py  test_consistency.py  test_data_cleaning.py  test_data_collection.py  test_geonames_geocode.py  test_join_geocoded.py  test_llm_geocode.py  test_marc_place_geonames.py  test_marc_places.py  test_place_canonicalization.py  test_place_keys.py  test_secondary_classification.py
viz/: fig1.py  fig2.py  fig3.py  fig4.py  plot_city_share_three_ranges.py  plot_mds_ny_time_trends.py  plot_ps_counts.py  plot_ps_new_york_share.py  plot_ps_predict.py  plot_ps_pub_loc_correlation.py  plot_ps_pz_new_york_share.py  plot_ps_ranges_ny_counts.py  plot_ps_ranges_ny_share.py  plot_ps_ranges_ny_time_counts.py  plot_ps_ranges_ny_time_share.py  plot_ps_unique_publishers.py  plot_ps_university_press.py  plot_ps_university_press_binned_bar.py  plot_ps_university_press_binned_fraction.py  plot_pz_new_york_share.py  predict.py  ps_ny_regression_stats.py
