[project]
name = "imprints"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Erik Fredner", email = "erik@fredner.org" }
]
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.3.2",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "requests>=2.34.2",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11.5",
]
